<resources>
    <string name="app_name">Project_2</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="sends_to_screen_of_info">cel_info</string>
    <string name="tire_pressure_info">tire_pressure_info</string>
    <string name="continue1">Continue</string>
    <string name="welcome_admin_username">welcome_admin_display</string>
    <string name="welcome_admin_username1">Welcome Admin Username!</string>
    <string name="add_change_info">Add/ change info</string>
    <string name="add_new_light">Add new light</string>
    <string name="add_users">Add users</string>
    <string name="remove_users">Remove users</string>
    <string name="remove_user">Remove user</string>
    <string name="add_user">Add user</string>
    <string name="check_engine_light_info">Check engine light info</string>
    <string name="check_engine_light_image">Check engine light image</string>
    <string name="back">Back</string>
    <string name="brake_system_info">Brake system info</string>
    <string name="airbag_light_info">Airbag light info</string>
    <string name="brake_system_light_info">Brake system light info</string>
    <string name="cruise_control_info">Cruise control info</string>
    <string name="turn_signal_info">Turn signal info</string>
    <string name="high_beam_info">High beam info</string>
    <string name="abs_info">abs info</string>
    <string name="oil_pressure_info">oil pressure info</string>
    <string name="oil_pressure_light">Oil pressure light</string>
    <string name="oil_pressure_light_info">Oil pressure light info</string>
    <string name="abs_light">ABS light</string>
    <string name="abs_light_info">ABS light info</string>
    <string name="please_sign_in">please_sign_in</string>
    <string name="please_sign_in1">Please Sign In</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter">Enter</string>
    <string name="don_t_have_an_account">Don\'t have an account:</string>
    <string name="sign_up">Sign up</string>
    <string name="add_new_users">Add new users</string>
    <string name="remove_users1">Remove users</string>
    <string name="welcome_admin_user">Welcome Admin User!</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="usernameTryAgainScreen">Username:</string>
    <string name="passwordTryAgainScreen">Password:</string>
    <string name="don_t_have_an_accountTryAgainScreen">Don\'t have an account?</string>
    <string name="sign_upTryAgainScreen">Sign up</string>
    <string name="sign_upPage">Sign up:</string>
    <string name="usernameSignUp">Username:</string>
    <string name="passwordSignUp">Password:</string>
    <string name="re_enter_passwordSignUp">Re-Enter Password:</string>
    <string name="sign_upSignUp">Sign up</string>
    <string name="enter_the_following_info_about_your_vehicle">Enter the following info about your vehicle:</string>
    <string name="vin_number">Vin number:</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="pin">Pin:</string>
    <string name="continueButton">Continue</string>
    <string name="power_steering_info">Power steering info</string>
    <string name="tire_pressure_info_image">Tire pressure info</string>
    <string name="tire_pressure_light_info">Tire pressure light info</string>
    <string name="battery_light">Battery light</string>
    <string name="battery_light_info">Battery light info</string>
    <string name="temp_light_info">Temp Light info</string>
    <string name="temp_light_info1">Temp light info</string>
    <string name="traction_control_light">Traction control light</string>
    <string name="traction_light_info">Traction light info</string>
    <string name="airbag_image">Airbag image</string>
    <string name="airbag_light_info1">Airbag light info</string>
    <string name="brake_system_light">Brake system light</string>
    <string name="brake_system_light_info1">Brake system light info</string>
    <string name="cruise_control_light">Cruise control light</string>
    <string name="cruise_control_light_info">Cruise control light info</string>
    <string name="power_steering_light">Power steering light</string>
    <string name="power_steering_light_info">Power steering light info</string>
    <string name="high_beam_light">High beam light</string>
    <string name="high_beam_light_info">High beam light info</string>
    <string name="backMainPage2">Back</string>
    <string name="back1">Back</string>
    <string name="main_activity_button_admin">Main activity</string>
    <string name="see_users_button">See users</string>
    <string name="edit_users_button">Edit users</string>
    <string name="users">Users:</string>
    <string name="enter_id_to_add_remove">Enter ID to add/ remove</string>
    <string name="confirm">Confirm</string>
    <string name="enter_username_to_remove_user">Enter username to remove user</string>
    <string name="main_activity">Main Activity</string>
    <string name="sign_out">Sign Out</string>
</resources>