<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage3"
    tools:ignore="ExtraText">

    // Background
    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0A408F"
        android:elevation="0dp"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="172dp" />

    // Username display text (Change this to display the username)
    <TextView
        android:id="@+id/displayUsername"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#0A408F"
        android:elevation="9dp"
        android:gravity="center"
        android:text="@string/welcome_user"
        android:textColor="@color/black"
        android:textSize="35sp"
        tools:ignore="MissingConstraints" />

    /*
    Traction Control (TCS) light button that when
    clicked takes to TCS light page
    */
    <ImageButton
        android:id="@+id/tractionControlLightButton"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:backgroundTint="#F6D02D"
        android:contentDescription="@string/brake_system_info"
        android:elevation="10dp"
        android:padding="18dp"
        android:scaleType="fitCenter"
        android:src="@drawable/traction1"
        android:onClick="TCT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayUsername"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="213dp" />

    /*
    Airbag light (SRS) button that when
    clicked takes to SRS light page
    */
    <ImageButton
        android:id="@+id/airbagLightButton"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#F62D2D"
        android:contentDescription="@string/airbag_light_info"
        android:elevation="10dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/airbag1"
        android:onClick="SRS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tractionControlLightButton"
        tools:ignore="RtlSymmetry" />

    /*
    Brake System light button that when
    clicked takes to brake light page
    */
    <ImageButton
        android:id="@+id/brakeSystemLightButton"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#F62D2D"
        android:contentDescription="@string/brake_system_light_info"
        android:elevation="10dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/brake_system1"
        android:onClick="Brake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/airbagLightButton"
        tools:ignore="RtlSymmetry" />

    // Button that allows user to go to the next page of lights
    <Button
        android:id="@+id/page2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/continue1"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brakeSystemLightButton" />


</androidx.constraintlayout.widget.ConstraintLayout>