<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

<!--    // Background-->
    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0A408F"
        android:elevation="0dp"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="172dp" />

<!--    // Username display text (Change this to display the username)-->
    <TextView
        android:id="@+id/displayUsername"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#0A408F"
        android:elevation="9dp"
        android:gravity="center"
        android:text="@string/welcome_user"
        android:textColor="@color/black"
        android:textSize="35sp"
        tools:ignore="MissingConstraints" />

<!--    /*-->
<!--    Cruise control light button that when-->
<!--    clicked takes to cruise control light page-->
<!--    */-->
    <ImageButton
        android:id="@+id/cruiseControlLightButton"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:backgroundTint="#33FF33"
        android:contentDescription="@string/cruise_control_info"
        android:elevation="10dp"
        android:padding="18dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cruise_control1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayUsername"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="213dp" />

<!--    /*-->
<!--    Turn signal button that when-->
<!--    clicked takes to turn signal light page-->
<!--    */-->
    <ImageButton
        android:id="@+id/turnSignalLightButton"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#33FF33"
        android:contentDescription="@string/turn_signal_info"
        android:elevation="10dp"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/turn_signal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cruiseControlLightButton"
        tools:ignore="RtlSymmetry" />

<!--    /*-->
<!--    High beam light button that when-->
<!--    clicked takes to high beam light page-->
<!--    */-->
    <ImageButton
        android:id="@+id/highBeamLightButton"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#004C99"
        android:contentDescription="@string/high_beam_info"
        android:elevation="10dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/high_beam1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turnSignalLightButton"
        tools:ignore="ContentDescription,RtlSymmetry" />

<!--    // Button that allows user to go to the next page of lights-->
    <Button
        android:id="@+id/page2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/continue1"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highBeamLightButton" />


</androidx.constraintlayout.widget.ConstraintLayout>