<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoggedInPage"
    tools:ignore="ExtraText">

    // Display admin logged in display text
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/welcome_admin_user"
        android:textColor="@color/black"
        android:textSize="49sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    // Background color
    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0A408F"
        android:elevation="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    // Remove users button
    <Button
        android:id="@+id/removeUserButton"
        android:layout_width="290dp"
        android:layout_height="130dp"
        android:backgroundTint="#0874E2"
        android:text="@string/remove_users1"
        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/addNewUserButton"
        tools:ignore="InvalidId,UnknownId"
        tools:layout_editor_absoluteY="483dp" />

    // Add new users button
    <Button
        android:id="@+id/addNewUserButon"
        android:layout_width="290dp"
        android:layout_height="130dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#0874E2"
        android:text="@string/add_new_users"
        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>